added period to end of sentence

--- a/MIT.ipynb
+++ b/MIT.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "The original MIT logo represents two figures symbolizing the fields of Science and Art. The image below displays the original logo.\n",
     "\n",
-    "Seymour Papert was an MIT professor that helped design the Logo programming language\n",
+    "Seymour Papert was an MIT professor that helped design the Logo programming language.\n",
     "\n",
     "![](image.png)"
    ]
